fix(banner): system alerts is not responsive (#122)

--- a/packages/banner/addon/styles/components/_nucleus-banner-item.scss
+++ b/packages/banner/addon/styles/components/_nucleus-banner-item.scss
@@ -18,6 +18,11 @@
     top: 8px;
     right: 16px;
   }
+
+  &__content {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .nucleus-banner--mini {
