--- a/packages/banner/addon/styles/components/_nucleus-banner.scss
+++ b/packages/banner/addon/styles/components/_nucleus-banner.scss
@@ -34,7 +34,8 @@
       position: absolute;
       top: 40px;
       right: 0;
-      width: 400px;
+      max-width: 400px;
+      width: calc(100vw - 16px);
       background: #fff;
       box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .15);
       padding: 8px;
@@ -117,6 +118,7 @@
   @media screen and (min-width: $mobile-screen-min-width) and (max-width: $mobile-screen-max-width) {
     &__main {
       overflow-x: auto;
+      padding-left: 8px;
     }
   }
 }
